--- a/前端/浏览器/浏览器缓存.md
+++ b/前端/浏览器/浏览器缓存.md
@@ -28,20 +28,26 @@ disk cache
 ### 强缓存
 浏览器在加载资源时，会先根据本地缓存资源的 header 中的信息判断是否命中强缓存，如果命中则直接使用缓存中的资源不会再向服务器发送请求。
 
-这里的 header 中的信息指的是 expires 和 cahe-control.
+这里的 header 中的信息指的是 `expires` 和 `cache-control`.
 
 ### 协商缓存
 当强缓存没有命中的时候，浏览器会发送一个请求到服务器，服务器根据 header 中的部分信息来判断是否命中缓存。如果命中，则返回 304 ，告诉浏览器资源未更新，可使用本地的缓存。
 
-这里的 header 中的信息指的是 Last-Modify/If-Modify-Since 和 ETag/If-None-Match.
+这里的 header 中的信息指的是 `Last-Modify/If-Modify-Since` 和 `ETag/If-None-Match`.
 
 总结
 当浏览器再次访问一个已经访问过的资源时，它会这样做：
+1. 看看是否命中强缓存，如果命中，就直接使用缓存了。
+2. 如果没有命中强缓存，就发请求到服务器检查是否命中协商缓存。
+3. 如果命中协商缓存，服务器会返回 304 告诉浏览器使用本地缓存。
+4. 否则，返回最新的资源。
 
-1.看看是否命中强缓存，如果命中，就直接使用缓存了。
+Expires
+Expires是HTTP/1.0控制网页缓存的字段，其值为服务器返回该请求结果缓存的到期时间，即再次发起该请求时，如果客户端的时间小于Expires的值时，直接使用缓存结果。
 
-2.如果没有命中强缓存，就发请求到服务器检查是否命中协商缓存。
-
-3.如果命中协商缓存，服务器会返回 304 告诉浏览器使用本地缓存。
-
-4.否则，返回最新的资源。
+cache-control的取值为
+* public：所有内容都将被缓存（客户端和代理服务器都可缓存）
+* private：所有内容只有客户端可以缓存，Cache-Control的默认取值
+* no-cache：客户端缓存内容，但是是否使用缓存则需要经过协商缓存来验证决定
+* no-store：所有内容都不会被缓存，即不使用强制缓存，也不使用协商缓存
+* max-age=xxx (xxx is numeric)：缓存内容将在xxx秒后失效
