--- a/前端/浏览器/浏览器缓存.md
+++ b/前端/浏览器/浏览器缓存.md
@@ -28,7 +28,7 @@ disk cache
 ### 强缓存
 浏览器在加载资源时，会先根据本地缓存资源的 header 中的信息判断是否命中强缓存，如果命中则直接使用缓存中的资源不会再向服务器发送请求。
 
-这里的 header 中的信息指的是 `expires` 和 `cache-control`.
+这里的 header 中的信息指的是 `expires` 和 `cache-control`.常见的设置是max-age public private no-cache no-store等
 
 ### 协商缓存
 当强缓存没有命中的时候，浏览器会发送一个请求到服务器，服务器根据 header 中的部分信息来判断是否命中缓存。如果命中，则返回 304 ，告诉浏览器资源未更新，可使用本地的缓存。
